Fixed accept/reject inviation message not showing up.

--- a/myproject/inkle/static/css/main.css
+++ b/myproject/inkle/static/css/main.css
@@ -227,7 +227,6 @@ input, textarea
 
 .memberMessage, .sphereMessage
 {
-    display: none;
     padding: 5px;
     border: 2px solid #444;
     background-color: #BBB;
